fix - creating empty event / change logic creating order  / change template for enquires / add serialisers configs for option/package/rate/price and another entities / change frontend part for quote reply (performance and event part - showing) / add services and extra performances in request reply - for new / change quote reply - modal window - selecting performances and services / preparing performance objects on frontend part for sending for order

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -39,7 +39,7 @@
                     <p class="act-request-title">
                         Act request: <span class="bold-title">
                             {% for orderItem in order.items %}
-                                {{ orderItem.data['performance_title'] }},
+                                {{ orderItem.data['title'] }},
 
                             {% endfor %}
                         </span>
@@ -129,7 +129,7 @@
                             <p class="act-request-title">
                                 Act request: <span class="bold-title">
                             {% for item in order.items %}
-                                {{ item.data['performance_title'] }},
+                                {{ item.data['title'] }},
                             {% endfor %}
                         </span>
                                 <!--<span class="see-more">(<a href="#">See more</a>)</span>-->
