--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chatRoomEvent.html.twig
@@ -238,19 +238,19 @@
                 <!--service start-->
                 {% for p in order.performances %}
                 <article class="service">
-                    <h3 class="package-name">{{ p.data['performance_title'] }}</h3>
+                    <h3 class="package-name">{{ p.data['title'] }}</h3>
                     <ul class="">
                     {% for package in p.data.packages %}
                         <li>
-                            <strong class="sub-title">{{ package['package_name'] }}</strong>
+                            <strong class="sub-title">{{ package['name'] }}</strong>
                             <div class="row">
                                 {% for option in package['options'] %}
                                 <div class="col-md-12 no-pad">
-                                    <span class="short" name="currency1" id="currency1">{{ option['option_quantity'] }}</span>
+                                    <span class="short" name="currency1" id="currency1">{{ option['qty'] }}</span>
                                     <span class="">x</span>
-                                    <span class="short" name="currency11" id="currency11">{{ option['option_duration'] }} min</span>
+                                    <span class="short" name="currency11" id="currency11">{{ option['duration'] }} min</span>
                                     <div class="pull-right">
-                                        <span class="short">{{ option['rates'][0]["rate_amount"] }}</span>
+                                        <span class="short">{{ option['rates'][0]["price"]['amount'] }}</span>
                                         <span class="pull-right">GBP</span>
                                     </div>
                                 </div>
