--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -1,6 +1,5 @@
 {% include 'ActedLegalDocsBundle:Default:header.html.twig' %}
 {# dump(order.performances) #}
-<main class="chat-room">
 <script type="text/javascript">
     window.getOrderId = function(){ return {{ order.id }}};
 
@@ -22,6 +21,8 @@
         detailsAccepted: Boolean({{ order.detailsAccepted }})
     }
 </script>
+<main class="chat-room">
+    {% include '@ActedLegalDocs/Default/confirmBookingModal.html.twig' %}
     <div class="container">
         {% include 'ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig' %}
         <!-- THIS MENU VISIBLE ONLY ON DESCTIOP SCREEN-->
@@ -59,14 +60,14 @@
                 <h2 class="main-title">Chatroom #{{ chat.chat_id }}</h2>
                 <div class="hidden" id="chatId">{{ chat.chat_id }}</div>
                 <!--detail form start-->
-                <div class="tooltip-message warning">
+                <!--<div class="tooltip-message warning">
                     <i class="notification-bell" aria-hidden="true"></i>
                     <span>The client has updated the event details, please validate them!</span>
                 </div>
                 <div class="tooltip-message info">
                     <i class="notification-bell" aria-hidden="true"></i>
                     <span>The client has updated the performance time, please confirm you are fine with this change</span>
-                </div>
+                </div>-->
             </section>
 
             <!-- EVENT INFO SECTION -->
@@ -185,7 +186,7 @@
                     </div>
                 </div>
                 <div class="row text-center">
-                    <button class="book-now-btn" disabled>Book now</button>
+                    <button class="book-now-btn" v-on:click="showConfirmModal" v-bind:disabled="bookingAllowed">Book now</button>
                 </div>
             </section>
             <section class="section-four">
@@ -526,5 +527,7 @@
 <script type="text/javascript" src="{{ asset('bundles/goswebsocket/js/gos_web_socket_client.js') }}"></script>
 <script type="text/javascript" src="{{ asset('bundles/goswebsocket/js/vendor/autobahn.min.js') }}"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>
+
+
 
 {% include 'ActedLegalDocsBundle:Default:footer.html.twig' %}
